sandbox/output
StockProfit.tests.cpp:39:51: error: use of undeclared identifier 'priceLength'
    vector<int> prices(priceValues, priceValues + priceLength);
                                                  ^
1 error generated.
make: *** [test] Error 1
